Clean up project folder.